# jenkins-learn

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  arithmetic.cpp  arithmetic.h
test/: CMakeLists.txt  test_add.cpp  test_subtract.cpp
